[package]
name = "grpc_order_book"
version = "0.1.0"
edition = "2021"
authors = ["Alessio Artoni <alessio@artoni.org>"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4"
pretty_env_logger = "0.4"
rust_decimal = "1.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
